cmake_minimum_required (VERSION 3.10)
project(oneD_sim LANGUAGES CXX)

add_executable(${PROJECT_NAME} $<$<BOOL:$<TARGET_EXISTS:PSOPT_SNOPT_interface>>:$<TARGET_OBJECTS:PSOPT_SNOPT_interface>> oneD_sim.cpp)
add_executable(${PROJECT_NAME}_tracking $<$<BOOL:$<TARGET_EXISTS:PSOPT_SNOPT_interface>>:$<TARGET_OBJECTS:PSOPT_SNOPT_interface>> oneD_sim_tracking.cpp)
add_executable(${PROJECT_NAME}_MultiphaseTest $<$<BOOL:$<TARGET_EXISTS:PSOPT_SNOPT_interface>>:$<TARGET_OBJECTS:PSOPT_SNOPT_interface>> oneD_sim_MultiphaseTest.cpp)
add_dependencies(${PROJECT_NAME} PSOPT)
add_dependencies(${PROJECT_NAME}_tracking PSOPT)
add_dependencies(${PROJECT_NAME}_MultiphaseTest PSOPT)
target_link_libraries(${PROJECT_NAME} PUBLIC PSOPT PRIVATE PkgConfig::ipopt adolc Eigen3::Eigen)
target_link_libraries(${PROJECT_NAME}_tracking PUBLIC PSOPT PRIVATE PkgConfig::ipopt adolc Eigen3::Eigen)
target_link_libraries(${PROJECT_NAME}_MultiphaseTest PUBLIC PSOPT PRIVATE PkgConfig::ipopt adolc Eigen3::Eigen)

if(${WITH_SNOPT_INTERFACE})
	enable_language(Fortran)
	target_link_libraries(${PROJECT_NAME} PRIVATE gfortran ${snopt7_LIBRARIES} PSOPT_SNOPT_interface)
	target_link_libraries(${PROJECT_NAME}_tracking PRIVATE gfortran ${snopt7_LIBRARIES} PSOPT_SNOPT_interface)
	target_link_libraries(${PROJECT_NAME}_MultiphaseTest PRIVATE gfortran ${snopt7_LIBRARIES} PSOPT_SNOPT_interface)
endif()
